--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.4.1",
     "react-router-dom": "^7.4.1",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.5"
